force-app/main/default/objects/Permission_Request__c/Permission_Request__c.object-meta.xml
<CustomObject>
    <label>Solicitud de permiso</label>
    <pluralLabel>Solicitudes de permisos</pluralLabel>
    <nameField>
        <label>Solicitud de permiso</label>
        <type>AutoNumber</type>
        <displayFormat>SP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>