force-app/main/default/objects/Permission_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descripcion</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>