force-app/main/default/objects/Permission_Request__c/fields/HU__c.field-meta.xml
<CustomField>
    <fullName>HU__c</fullName>
    <label>HU</label>
    <type>MasterDetail</type>
    <referenceTo>HU__c</referenceTo>
    <relationshipLabel>Solicitudes de permisos</relationshipLabel>
    <relationshipName>Permission_Requests</relationshipName>
</CustomField>