force-app/main/default/objects/Permission_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <label>Nro de solicitud</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>