force-app/main/default/objects/Permission_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En progreso</fullName>
            </value>
            <value>
                <fullName>Faltan VB</fullName>
            </value>
            <value>
                <fullName>Resuelto</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>